[package]
name = "hit-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.46"
aws-sdk-dynamodb = "0.16"
aws-sdk-lambda = "0.16"
aws-smithy-types = "0.46.0"
lambda_runtime = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20", features = ["full"] }
